[ui] fix overlapping divs

--- a/client/src/components/Messaging/MessageBox.css
+++ b/client/src/components/Messaging/MessageBox.css
@@ -13,12 +13,24 @@
 .message-bar {
   display: flex;
 }
-.messaging {
+.messageView {
   position: fixed;
-  bottom: 0px;
+  bottom: 70px;
+  width: 335px;
+  height: 200px;
+  padding-top: 5px;
+  max-height: 200px;
+  float:left;
+  overflow-y: auto;
+  font-size: 12px;
 }
 #chat-btn {
   font-size: 12px;
   color: white;
   background-color:red;
+}
+.container {
+  position: fixed;
+  bottom: 280px;
+  padding-top: 5px;
 }
